# MLOps-CI-Pipeline

./: .dockerignore  .env.example  .gitignore  LICENSE  MLOPS_CI_PIPELINE_OVERVIEW.md  README.md  package-lock.json  pyproject.toml
.github/workflows/: ci-pipeline.yml
data/drift_scenarios/: README.md
data/evaluation/: README.md
data/raw/: README.md
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  deployment.md  drift-detection.md  evaluation_plan.md  image_datasets.md
src/common/: device.py  io.py
src/config/: README  __init__.py  deployment.yaml  deployment_loader.py  drift.yaml  drift_loader.py  evaluation.yaml  evaluation_loader.py  loader.py  pipeline.yaml  pipeline_cifar10.yaml  pipeline_fivek.yaml  pipeline_image.yaml  pipeline_image_classification.yaml  pipeline_image_cnn.yaml  pipeline_image_raw.yaml  pipeline_loader.py  pipeline_raw_cnn.yaml  pipeline_raw_image.yaml  pipeline_regression.yaml  pipeline_tabular.yaml  pipeline_tabular_classification.yaml  pipeline_tabular_classification_ci.yaml  pipeline_tabular_regression.yaml  preprocessing.yaml  preprocessing_cifar10.yaml  preprocessing_image.yaml  preprocessing_image_cnn.yaml  preprocessing_loader.py  preprocessing_raw_cnn.yaml  preprocessing_raw_image.yaml  preprocessing_tabular.yaml  promotion.yaml  promotion_loader.py  schema.py  training_classification.yaml  training_image_cnn.yaml  training_loader.py  training_regression.yaml  validation.py
src/data/: README  create_dataset_yaml.py  drift_adaptation.py  image_drift_simulator.py  image_preprocess.py  image_split.py  image_utils.py  isp_gpu.py  isp_pipeline.py  prepare_batch.py  prepare_batch_cli.py  preprocess.py  split.py  tabular_drift_adaptation.py  validate.py  versioning.py
src/deployment/: app.py  load_model.py  routes.py  schemas.py  startup_checks.py
src/drift/: alignment.py  compute.py  image_compute.py  interpret.py
src/evaluation/: drift_tests.py  evaluate.py  image_drift_analysis.py  standard_image_robustness.py
src/monitoring/: drift.py  drift_decision.py  history.py  image_drift_monitor.py  image_monitor_cli.py  mlflow_sink.py  monitor_cli.py  monitor_summary_cli.py  prepare_drift_cli.py  prepare_drift_tabular_cli.py  reports.py  rollback_drift_cli.py
src/pipeline/: README  mlflow_logger.py  report.py  run_pipeline.py  steps.py
src/promotion/: approval.py  comparator.py  rules.py
src/registry/: metadata.py  model_registry.py  rollback.py
src/training/: __init__.py  _tabular.py  model_factory.py
tests/: conftest.py
tests/common/: test_io.py
tests/config/: test_deployment_loader.py  test_drift_loader.py  test_loader.py  test_promotion_loader.py
(+57 files in other folders)
