[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lightweight-mlops-pipeline"
version = "0.1.0"
description = "Lightweight drift-aware MLOps pipeline for controlled retraining and deployment."
requires-python = ">=3.12,<3.13"

dependencies = [
    "setuptools>=68,<81",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "scikit-learn==1.4.2",
    "mlflow==2.11.3",
    "protobuf<5",
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "evidently==0.6.7",
    "pyyaml==6.0.1",
    "Pillow>=10.0,<12",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "rawpy>=0.18,<1.0",
    "colour-demosaicing>=0.2,<1.0",
    "scikit-image>=0.22,<1.0",
    "scipy>=1.12,<2.0",
    "python-dateutil>=2.9,<3.0"
]

[project.optional-dependencies]
# Windows AMD/Intel GPU acceleration via DirectML. Opt-in only — installs the
# torch-directml plugin alongside the existing torch wheel. Not supported on
# Linux. The Docker image deliberately omits this extra and stays CPU-only.
directml = ["torch-directml>=0.2,<1.0"]

[project.scripts]
run-pipeline         = "src.pipeline.run_pipeline:main"
rollback-model       = "src.registry.rollback:main"
run-api              = "src.deployment.app:main"
monitor-drift        = "src.monitoring.monitor_cli:main"
monitor-drift-image  = "src.monitoring.image_monitor_cli:main"
monitor-summary      = "src.monitoring.monitor_summary_cli:main"
prepare-image-batch    = "src.data.prepare_batch_cli:main"
prepare-drift-training = "src.monitoring.prepare_drift_cli:main"
prepare-drift-training-tabular = "src.monitoring.prepare_drift_tabular_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
